# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "webexbotsdk"
description = "Webex bot creation framework and tools"
version = "0.2.6"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Topic :: Communications :: Chat"
]
keywords = [
  "cisco", "webex", "teams", "bot", "python", "framework", "enterprise", "messaging"
]
requires-python = ">=3"
dependencies = [
  "bottle",
  "webexteamssdk",
  "pyngrok",
  "tinydb",
  "tinydb-encrypted-jsonstorage"
]

[project.urls]
Source = "https://github.com/xharriscisco/WebexPythonBotSDK"